--- a/cloudfoundry/provider/fixtures/resource_service_credential_binding_invalid_name.yaml
+++ b/cloudfoundry/provider/fixtures/resource_service_credential_binding_invalid_name.yaml
@@ -13,7 +13,7 @@ interactions:
         remote_addr: ""
         request_uri: ""
         body: |
-            {"type":"app","relationships":{"app":{"data":{"guid":"ec6ac2b3-fb79-43c4-9734-000d4299bd59"}},"service_instance":{"data":{"guid":"5e2976bb-332e-41e1-8be3-53baafea9296"}}},"name":"test","metadata":{"labels":null,"annotations":null}}
+            {"type":"app","relationships":{"app":{"data":{"guid":"e04e63c1-6e69-4537-b9e2-95ab6f3ebfcf"}},"service_instance":{"data":{"guid":"5e2976bb-332e-41e1-8be3-53baafea9296"}}},"name":"test","metadata":{"labels":null,"annotations":null}}
         form: {}
         headers:
             Authorization:
@@ -21,7 +21,7 @@ interactions:
             Content-Type:
                 - application/json
             User-Agent:
-                - Go-CF-Client/3.0
+                - Terraform/1.10.4 terraform-provider-cloudfoundry/dev
         url: https://api.x.x.x.x.com/v3/service_credential_bindings
         method: POST
       response:
@@ -39,17 +39,15 @@ interactions:
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Thu, 18 Apr 2024 08:23:18 GMT
+                - Mon, 01 Sep 2025 09:43:25 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
-            Server:
-                - nginx
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 530f8637dc6b97ab
+                - 421ab12e41bafb96
             X-B3-Traceid:
-                - c09add57a92f42a2530f8637dc6b97ab
+                - 3f4a0afb3dfc4a96421ab12e41bafb96
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -63,13 +61,13 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1713429188"
+                - "1756720195"
             X-Runtime:
-                - "0.016801"
+                - "0.020304"
             X-Vcap-Request-Id:
-                - c09add57-a92f-42a2-530f-8637dc6b97ab::411a1ffb-64b4-4ba0-a5d0-794cf89bbffe
+                - 3f4a0afb-3dfc-4a96-421a-b12e41bafb96::62f76f26-ea93-4880-82c5-90b1558255fa
             X-Xss-Protection:
                 - 1; mode=block
         status: 422 Unprocessable Entity
         code: 422
-        duration: 207.315458ms
+        duration: 272.619125ms
