--- a/cloudfoundry/provider/fixtures/resource_service_credential_binding_invalid_service_key.yaml
+++ b/cloudfoundry/provider/fixtures/resource_service_credential_binding_invalid_service_key.yaml
@@ -21,7 +21,7 @@ interactions:
             Content-Type:
                 - application/json
             User-Agent:
-                - Go-CF-Client/3.0
+                - Terraform/1.10.4 terraform-provider-cloudfoundry/dev
         url: https://api.x.x.x.x.com/v3/service_credential_bindings
         method: POST
       response:
@@ -39,17 +39,15 @@ interactions:
             Content-Type:
                 - application/json; charset=utf-8
             Date:
-                - Thu, 18 Apr 2024 08:23:19 GMT
+                - Mon, 01 Sep 2025 09:43:26 GMT
             Referrer-Policy:
                 - strict-origin-when-cross-origin
-            Server:
-                - nginx
             Strict-Transport-Security:
                 - max-age=31536000; includeSubDomains; preload;
             X-B3-Spanid:
-                - 6000e0f57ba98032
+                - 67b826885e5d87e9
             X-B3-Traceid:
-                - 43ae0067557a423d6000e0f57ba98032
+                - da9a12fead6d4f8b67b826885e5d87e9
             X-Content-Type-Options:
                 - nosniff
             X-Download-Options:
@@ -63,13 +61,13 @@ interactions:
             X-Ratelimit-Remaining:
                 - "18000"
             X-Ratelimit-Reset:
-                - "1713429188"
+                - "1756720195"
             X-Runtime:
-                - "0.013733"
+                - "0.013336"
             X-Vcap-Request-Id:
-                - 43ae0067-557a-423d-6000-e0f57ba98032::c1878544-1900-40e9-bf0d-13b0e36f7ca5
+                - da9a12fe-ad6d-4f8b-67b8-26885e5d87e9::6cdf8581-653b-44d4-9db3-72c6f7833ad8
             X-Xss-Protection:
                 - 1; mode=block
         status: 422 Unprocessable Entity
         code: 422
-        duration: 204.900292ms
+        duration: 264.044625ms
