--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ on:
       - synchronize
       - ready_for_review
     paths-ignore:
-      - '*.md'
+      - "*.md"
   push:
     branches:
       - main
     paths-ignore:
-      - '*.md'
+      - "*.md"
   workflow_dispatch:
   workflow_call:
 
@@ -35,10 +35,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: actions/checkout@v6 # v4.0.0
+      - uses: actions/checkout@v6
       - uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           #cache: true
       - run: go mod download
       - run: go build -v .
@@ -53,20 +53,36 @@ jobs:
     name: Docu Generation
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6 # v4.0.0
-      - uses: hashicorp/setup-terraform@5e8dbf3c6d9deaf4193ca7a8fb23f2ac83bb6c85 # v4.0.0
+      - uses: actions/checkout@v6
+      - uses: hashicorp/setup-terraform@5e8dbf3c6d9deaf4193ca7a8fb23f2ac83bb6c85
         with:
           terraform_version: ${{ env.LATEST_VERSION }}
           terraform_wrapper: false
       - uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
       - run: go generate ./...
       - name: git diff
         run: |
           git diff --compact-summary --exit-code || \
             (echo; echo "Unexpected difference in directories after code generation. Run 'go generate ./...' command and commit."; exit 1)
+
+  gofix:
+    if: github.event.pull_request.draft == false
+    name: Go Fix
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
+        with:
+          go-version-file: "go.mod"
+          cache: false
+      - run: go fix ./...
+      - name: git diff
+        run: |
+          git diff --compact-summary --exit-code || \
+            (echo; echo "Unexpected difference in directories after running 'go fix'. Run 'go fix ./...' command and commit."; exit 1)
 
   # Run acceptance tests in a matrix with Terraform CLI versions
   test_with_terraform_versions:
@@ -78,25 +94,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-      # List of Terraform versions to be tested - last three versions are in scope
-      # Check https://endoflife.date/terraform for end of support dates
-      # '1.6.*' end of security support 10 Apr 2024
-      # '1.7.*' end of security support 26 Jun 2024
-      # '1.8.*' end of security support 26 Nov 2024
-      # '1.9.*' #end of security support 27 Feb 2025
-      # '1.10.*' end of security support 14 May 2025
-      # '1.11.*' end of security support 20 Aug 2025
+        # List of Terraform versions to be tested - last three versions are in scope
+        # Check https://endoflife.date/terraform for end of support dates
+        # '1.6.*' end of security support 10 Apr 2024
+        # '1.7.*' end of security support 26 Jun 2024
+        # '1.8.*' end of security support 26 Nov 2024
+        # '1.9.*' #end of security support 27 Feb 2025
+        # '1.10.*' end of security support 14 May 2025
+        # '1.11.*' end of security support 20 Aug 2025
         terraform:
-          - '1.12.*'
-          - '1.13.*'
-          - '1.14.*'
+          - "1.12.*"
+          - "1.13.*"
+          - "1.14.*"
     steps:
-      - uses: actions/checkout@v6 # v4.0.0
+      - uses: actions/checkout@v6
       - uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
         with:
-          go-version-file: 'go.mod'
+          go-version-file: "go.mod"
           cache: true
-      - uses: hashicorp/setup-terraform@5e8dbf3c6d9deaf4193ca7a8fb23f2ac83bb6c85 # v4.0.0
+      - uses: hashicorp/setup-terraform@5e8dbf3c6d9deaf4193ca7a8fb23f2ac83bb6c85
         with:
           terraform_version: ${{ matrix.terraform }}
           terraform_wrapper: false
